--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -7,6 +7,11 @@
     android:background="@color/white"
     >
 
+    <!--<LinearLayout-->
+        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:orientation="vertical"-->
+        <!--android:layout_height="match_parent">-->
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
@@ -495,7 +500,7 @@
     <RelativeLayout
         android:id="@+id/mainLay"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <com.hitasoft.app.customclass.ProgressWheel
             xmlns:wheel="http://schemas.android.com/apk/res-auto"
@@ -544,7 +549,7 @@
     <FrameLayout
         android:id="@+id/gradientFrame"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="@drawable/blacktrans"
         android:visibility="gone" />
@@ -577,5 +582,5 @@
             <!--android:src="@drawable/unmatch" />-->
     <!--</LinearLayout>-->
 
-
+    <!--</LinearLayout>-->
 </android.support.design.widget.CoordinatorLayout>
