--- a/app/src/main/res/layout/activity_noitification.xml
+++ b/app/src/main/res/layout/activity_noitification.xml
@@ -18,6 +18,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
+            android:id="@+id/imageViewBackButton"
             android:layout_marginRight="15dp"
             android:src="@drawable/back" />
 
